--- a/baseline_chen_2.ipynb
+++ b/baseline_chen_2.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -478,7 +478,7 @@
        "2049    2016     154   1314      77   1437      74    N      0       0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -557,7 +557,7 @@
        "2049    2016   1314   1437       0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -674,7 +674,7 @@
        "2049    2016   1314   1437       0      1    1314      2    1437"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -797,7 +797,7 @@
        "2049    2016   1314   1437       0      1    1314      2    1437         -1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -882,7 +882,7 @@
        "2049    2016   1314   1437       0         -1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1008,6 +1008,31 @@
     "logreg = LogisticRegression()\n",
     "scores = cross_val_score(logreg, data0.seed_diff.reshape(-1,1), data0.result, cv=5)\n",
     "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.55587855992964441"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import log_loss\n",
+    "log = LogisticRegression()\n",
+    "pred_prob = log.fit(x_train, y_train).predict_proba(x_test)\n",
+    "log_loss(y_test,pred_prob)"
    ]
   },
   {
