--- a/baseline_chen_2.ipynb
+++ b/baseline_chen_2.ipynb
@@ -1037,12 +1037,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.711500974659\n",
+      "[[194  78]\n",
+      " [ 70 171]]\n",
+      "0.686746987952\n",
+      "0.709543568465\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.60343304052987135"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "clf = svm.SVC()\n",
+    "\n",
+    "print(clf.fit(x_train, y_train).score(x_test,y_test));\n",
+    "\n",
+    "pred = clf.fit(x_train, y_train).predict(x_test)\n",
+    "confusion = confusion_matrix(y_test,pred)\n",
+    "print(confusion);\n",
+    "print(precision_score(y_test,pred));\n",
+    "print(recall_score(y_test,pred));\n",
+    "\n",
+    "clf = svm.SVC(probability=True)\n",
+    "\n",
+    "pred_prob = clf.fit(x_train, y_train).predict_proba(x_test)\n",
+    "log_loss(y_test,pred_prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "data = pd.read_csv(\"all_data.csv\")"
+   ]
   }
  ],
  "metadata": {
